--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.11.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_messaging: ^11.2.5
 
 dev_dependencies:
   flutter_test:
